[package]
name = "map-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# UI Framework
eframe = "0.26"
egui = "0.26"

# Graphics and rendering
wgpu = "0.19"
bytemuck = { version = "1.4", features = ["derive"] }

# HTTP and serialization
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Geospatial
geo = "0.26"
geo-types = "0.7"

# Caching and storage
lru = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Animation and time
instant = "0.1"

# Math and image processing
image = "0.24"
nalgebra = "0.32"

# Blocking executor for async in sync contexts
pollster = "0.3"

# NEW: for lazy static initialization
once_cell = "1.17"

# spatial indexing
rstar = "0.11"

[lib]
name = "map_rs"
path = "src/lib.rs"

[[example]]
name = "basic_map"
path = "examples/basic_map.rs"
