[package]
name = "maplet"
version = "0.1.0"
edition = "2021"
description = "A modular, GPU-accelerated, async-aware Rust map engine"
license = "MIT"
repository = "https://github.com/PoHsuanLai/maplet"
keywords = ["maps", "gis", "gpu", "egui", "wgpu"]
categories = ["graphics", "visualization"]

[features]
default = ["egui", "wasm", "tokio-runtime", "animations", "debug", "serde-support"]

egui = ["dep:eframe", "dep:egui", "dep:pollster"]

wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys"]

tokio-runtime = ["dep:tokio"]

animations = []

clustering = []
heatmaps = []
vector-layers = []
offline-tiles = []
custom-projections = []

performance-high = []
performance-low = []

tile-sources-osm = []
tile-sources-mapbox = []
tile-sources-custom = []

app = ["egui", "wasm", "tokio-runtime", "animations", "clustering", "heatmaps", "vector-layers"]

debug = ["dep:log", "dep:env_logger"]
serde-support = ["dep:serde"]

[dependencies]
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
instant = "0.1"
once_cell = "1.17"

wgpu = "0.19"
bytemuck = { version = "1.4", features = ["derive"] }
image = "0.24"
nalgebra = "0.32"

tokio = { version = "1.36", features = ["rt-multi-thread", "sync", "macros", "time"], optional = true }

eframe = { version = "0.26", optional = true }
egui = { version = "0.26", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }  
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window", 
    "Document", 
    "Element", 
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Event",
    "EventTarget",
    "MouseEvent",
    "KeyboardEvent",
    "TouchEvent",
    "Location",
    "History",
    "Storage",
    "Performance",
    "PerformanceEntry",
    "PerformanceMark",
    "PerformanceMeasure",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "AbortController",
    "AbortSignal",
], optional = true }

reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
geo = "0.26"
geo-types = "0.7"
lru = "0.10"
rstar = "0.11"
crossbeam-channel = "0.5"
fxhash = "0.2"

log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

pollster = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[lib]
name = "maplet"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["maplet-app"]
