[package]
name = "maplet-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add the main maplet library with egui support and rendering
maplet = { path = "..", features = ["egui", "tokio-runtime"] }

# egui and eframe for the UI
eframe = "0.26"
egui = "0.26"

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "signal", "time"] }

# Logging
env_logger = "0.10"


